tcm.com (archived on 2019-06-11)
{
  "alexa_rank": 25218,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 28016,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.87,
  "homepage_snapshot_redirected_domain": "tcm.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190401065956id_/http://www.tcm.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190401065956id_/http%3A//tcm.com",
  "interval": "2019_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "tcm.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190611203117id_/http%3A//www.tcm.com/privacy.html",
  "policy_title": "Turner Broadcasting Sytem, Inc. Online Privacy Statement",
  "policy_url": "tcm.com/privacy.html",
  "sha1": "71590c5ea2d9bd7a8c8989b0fb8169bb119902b5",
  "simhash": 744352245834549921,
  "simhash_updated": false,
  "site_hostname": "tcm.com",
  "site_url": "http://tcm.com",
  "smog": 15.43,
  "strict_updated": false,
  "timestamp": "20190611203117",
  "word_count": 4515,
  "year": 2019
}

--- a/t/tc/tcm/tcm.com.html
+++ b/t/tc/tcm/tcm.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the tcm.com privacy policy that was archived on 2018-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181209061939id_/http%3A//www.tcm.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tcm.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611203117id_/http%3A//www.tcm.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html class="js"><head>
 <title>Turner Broadcasting Sytem, Inc. Online Privacy Statement</title>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-<meta http-equiv="date" content="Sun December 9, 2018 1:19 AM EST">
-<meta name="copyright" content="Copyright 2018 - tcm.com">
+<meta http-equiv="date" content="Tue June 11, 2019 4:31 PM EST">
+<meta name="copyright" content="Copyright 2019 - tcm.com">
 <meta name="robots" content="INDEX,FOLLOW,ALL">
 <meta name="Classification" content="entertainment, movies, television, shopping">
 <meta name="verify-v1" content="Gm/cDSTAJMOdtdixoE0PyRs0odRlSAUg9vbF79MPWyI=">
@@ -16,9 +16,9 @@
 <meta property="og:site_name" content="Turner Classic Movies" id="ogsite">
 <meta property="og:description" content="Turner Classic Movies presents the greatest motion pictures of all time from one of the largest film libraries in the world. Find video, photos, forums, blogs and shop for some of the best movies ever
 made only at TCM!" id="ogdescr">
-<meta property="og:image" content="http://i.cdn.turner.com/v5cache/TCM/images/redesign/logos/tcm_90.jpg" id="ogthumb">
+<meta property="og:image" content="http://i.cdn.turner.com/v5cache/TCM/images/tcm-share-1200x630.png" id="ogthumb">
 <meta property="og:url" content="http://www.tcm.com/privacy.html" id="ogurl">
-<script src="https://api.autopilothq.com/anywhere/af0f1d1e4a01438eb60caa8b8d783ade99a608c8ba954f8d9544d81731a4bc17?t=Turner%20Broadcasting%20Sytem%2C%20Inc.%20Online%20Privacy%20Statement&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20181209061939id_%2Fhttp%253A%2F%2Fwww.tcm.com%2Fprivacy.html&amp;r=" type="text/javascript" async=""></script><script type="text/javascript">
+<script src="https://api.autopilothq.com/anywhere/af0f1d1e4a01438eb60caa8b8d783ade99a608c8ba954f8d9544d81731a4bc17?t=Turner%20Broadcasting%20Sytem%2C%20Inc.%20Online%20Privacy%20Statement&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20190611203117id_%2Fhttp%253A%2F%2Fwww.tcm.com%2Fprivacy.html&amp;r=" type="text/javascript" async=""></script><script type="text/javascript">
 document.documentElement.className = 'js';
 </script>
 <link rel="stylesheet" type="text/css" href="/css/stylesheet-flama1.css">
@@ -36,36 +36,28 @@ document.documentElement.className = 'js';
 <link rel="stylesheet" type="text/css" href="/css/toastr-2.0.1.css">
 <link rel="stylesheet" type="text/css" href="/css/tcm-gigya-standard.css">
 <!-- EPIC js files-->
-<script language="javascript" type="text/javascript" src="http://i.cdn.turner.com/ads/adfuel/ais/tcm-ais.js"></script>
-<script language="javascript" type="text/javascript" src="http://i.cdn.turner.com/ads/adfuel/adfuel-1.1.2.min.js"></script>
+<script language="javascript" type="text/javascript" src="https://i.cdn.turner.com/ads/adfuel/ais/tcm-ais.js"></script>
+<script language="javascript" type="text/javascript" src="https://i.cdn.turner.com/ads/adfuel/adfuel-1.1.2.min.js"></script>
 <!-- /EPIC js files-->
 <!-- <script src="http://i.cdn.turner.com/v5cache/TCM/js/tcm-jsmin.min.js?ver=2"></script>-->
-<script src="http://i.cdn.turner.com/v5cache/TCM/js/2017/tcm-jsmin.js"></script>
-<script type="text/javascript" src="http://i.cdn.turner.com/v5cache/TCM/js/2017/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="http://i.cdn.turner.com/v5cache/TCM/js/2017/jquery-migrate-1.2.1.min.js"></script>
+<script src="https://i.cdn.turner.com/v5cache/TCM/js/2017/tcm-jsmin.js"></script>
+<script type="text/javascript" src="https://i.cdn.turner.com/v5cache/TCM/js/2017/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="https://i.cdn.turner.com/v5cache/TCM/js/2017/jquery-migrate-1.2.1.min.js"></script>
 <!--This is production key-->
-<script type="text/javascript" src="http://cdn.gigya.com/js/gigya.js?apiKey=3_xytlGPEm_3NEY5GXqE7Ld4qC747zvGX69oLWS0D1LaqlHFggdQ9kY58mwxIwkk55">
-{
-autoLogin: true,
-siteName: 'tcm.com',
-sessionExpiration: -2,
-enabledProviders: 'facebook,twitter,'
-}
-</script>
-<script type="text/javascript" src="/js/gigya/tn.js"></script>
-<script type="text/javascript" src="/js/gigya/users.js"></script>
-<script type="text/javascript" src="/js/gigya/toastr-2.0.1.js"></script>
-<script type="text/javascript" src="/js/jquery.bxslider.js"></script>
-<script type="text/javascript" src="/js/jquery.ui.core.js"></script>
-<script type="text/javascript" src="/js/jquery.ui.datepicker.js?ver=2"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/gigya/tn.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/gigya/users.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/gigya/toastr-2.0.1.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/jquery.bxslider.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/jquery.ui.core.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/jquery.ui.datepicker.js?ver=2"></script>
 <script type="text/javascript">
 var jq = jQuery.noConflict();
 </script>
-<script type="text/javascript" src="/js/bootstrap.js"></script>
-<script type="text/javascript" src="/js/gigya/parsley.js"></script>
-<script type="text/javascript" src="/js/jquery.plugins.js?ver=7"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/bootstrap.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/gigya/parsley.js"></script>
+<script type="text/javascript" src="https://www.tcm.com/js/jquery.plugins.js?ver=7"></script>
 <!-- <script type="text/javascript" src="http://i.cdn.turner.com/v5cache/TCM/js/2017/swfobject.js"></script>-->
-<script src="/js/ads/cnn_adspaces.js"></script>
+<script src="https://www.tcm.com/js/ads/cnn_adspaces.js"></script>
 <!-- This is for the password field on the profile screenset so that only letters can be used -->
 <script type="text/javascript">
 function jqCheckAll4(id, pID) {
@@ -94,7 +86,7 @@ enabledProviders: 'facebook,twitter,'
 </script>-->
 <!-- GIGYA CODE END -->
 <!-- Primary function library placed before the callback and Primary Code Block. -->
-<script src="http://media.richrelevance.com/rrserver/js/1.0/p13n.js"></script>
+<script src="https://media.richrelevance.com/rrserver/js/1.0/p13n.js"></script>
 <!-- This function will consume the JSON response object, place after p13n.js -->
 <script charset="utf-8" type="text/javascript"> 
 function tenRRGetItemInfoFromData(tcmdbData){
@@ -211,7 +203,7 @@ r3(); // make sure your callback function has been defined before you make this 
 </script>	
 <!-- new globalnav -->
 <style type="text/css">
-.js #tcm-login { display: none;}
+/* .js #tcm-login { display: none;} */
 </style>
 <style>
 @media only screen and (max-device-width: 480px) {
@@ -362,12 +354,12 @@ jq('.btn-slide').hide();
 }
 });
 var thisURL = window.location.href;
-jq.post('https://graph.facebook.com', {
-id: thisURL,
-scrape: true
-}, function(response) {
-console.log(response);
-});
+// jq.post('https://graph.facebook.com', {
+// id: thisURL,
+// scrape: true
+// }, function(response) {
+// console.log(response);
+// });
 </script>
 <div id="container-navigation" style="z-index: 3000;">
 <a href="/" id="link-tcm-logo">TCM</a>
@@ -410,7 +402,6 @@ console.log(response);
 <li><span class="bln"></span><a itemprop="url" class="topNavElement" href="/bonhams/?ecid=subnavbonhamsauction">BONHAMS AUCTION</a></li>
 <li><span class="bln"></span><a itemprop="url" class="topNavElement" href="http://www.tcm.com/tours/?ecid=subnavtcmtours">TCM TOURS</a></li>
 <li><span class="bln"></span><a itemprop="url" class="topNavElement" href="http://www.tcm.com/fathom/?ecid=subnavtcmfathom">FATHOM EVENTS</a></li>
-<li><span class="bln"></span><a itemprop="url" class="topNavElement" href="/suggest-a-movie/index.html?ecid=subnavsuggestamovie">SUGGEST A MOVIE</a></li>
 </ul>
 </li>
 <li class="nav-item main-nav" id="nav-tcmdb"><a href="/tcmdb/?ecid=mainnav5tcmdb" class="topNavSection" itemprop="url">TCMDb</a>
@@ -433,7 +424,7 @@ console.log(response);
 </li> -->
 <!-- <li style="display:none;"class="nav-item main-nav" id="nav-morlocks"><a href="http://moviemorlocks.com/?ecid=mainnav6blog" class="topNavSection" itemprop="url" target="_blank">Blog</a>
 </li> -->
-<li class="nav-item main-nav" id="nav-mag"><a href="http://www.tcm.com/nowplayingemail" class="topNavSection" itemprop="url" target="_blank">Magazine</a>
+<li class="nav-item main-nav" id="nav-mag"><a href="https://preferences.tcm.com/?onlydisplay=nowplaying" class="topNavSection" itemprop="url">Magazine</a>
 </li>
 <li class="nav-item nav-last" id="nav-shop"><a href="https://shop.tcm.com/?ecid=PRF-TCM-100014&amp;pa=PRF-TCM-100014" class="topNavSection" itemprop="url" target="_blank">Shop</a>
 <ul id="shop-drop">
@@ -453,26 +444,26 @@ console.log(response);
 <div id="shop-callout-inr" itemscope="" itemtype="http://schema.org/EntertainmentBusiness">
 <h4 class="rst"><strong>Featured</strong> Products</h4>
 <span class="flyout-main">
-<a itemprop="url" href="https://shop.tcm.com/christmas-in-the-movies/9780762492480&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank" class="feature-shp">
-<img src="http://i.cdn.turner.com/v5cache/TCM/Images/Dynamic/i482/christmasinthemoviesbook_70x100_103120180132.jpg" alt="TCM: Christmas in the Movies Book: 30 Classics to Celebrate the Season" itemprop="image">
-<span itemprop="name" class="dark">TCM: Christmas in the Movies Book: 30 Classics to Celebrate the Season</span>
+<a itemprop="url" href="https://shop.tcm.com/tcm-annual-catalog-2019-edition/617742195262&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank" class="feature-shp">
+<img src="http://i.cdn.turner.com/v5cache/TCM/Images/Dynamic/i486/tcmshopcatalog2019_70x100_121120180125.jpg" alt="TCM Annual Catalog: 2019 Edition" itemprop="image">
+<span itemprop="name" class="dark">TCM Annual Catalog: 2019 Edition</span>
 </a>
-<p><span class="money" itemprop="priceRange">$16.95</span></p>
-<p><a style="border:0;" href="https://shop.tcm.com/checkout?atc=9780762492480&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><img src="http://i.cdn.turner.com/v5cache/TCM/images/reskin/redesign/shop_addtocart_btn.png" border="0"></a></p>
+<p><span class="money" itemprop="priceRange">$5.95</span></p>
+<p><a style="border:0;" href="https://shop.tcm.com/checkout?atc=617742195262&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><img src="http://i.cdn.turner.com/v5cache/TCM/images/reskin/redesign/shop_addtocart_btn.png" border="0"></a></p>
 </span>
 <span class="flyout-sub">
-<a itemprop="url" href="https://shop.tcm.com/the-farmers-daughter/738329215194&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><span itemprop="name"> The Farmer's Daughter DVD</span></a>
-<span class="money" itemprop="priceRange">$14.96</span> <a style="display:inline;border:0;" href="https://shop.tcm.com/checkout?atc=738329215194&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank">
+<a itemprop="url" href="https://shop.tcm.com/that-touch-of-mink/887090068703&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><span itemprop="name">That Touch of Mink DVD</span></a>
+<span class="money" itemprop="priceRange">$14.96</span> <a style="display:inline;border:0;" href="https://shop.tcm.com/checkout?atc=887090068703&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank">
 <img src="http://i.cdn.turner.com/v5cache/TCM/images/reskin/redesign/shop_addtocart_btn.png"></a>
 </span>
 <span class="flyout-sub">
-<a itemprop="url" href="https://shop.tcm.com/casablanca/883929243716&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><span itemprop="name"> Casablanca DVD</span></a>
-<span class="money" itemprop="priceRange">$9.71</span> <a style="display:inline;border:0;" href="https://shop.tcm.com/checkout?atc=883929243716&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank">
+<a itemprop="url" href="http://shop.tcm.com/ghost-and-mrs-muir-the-ghost-and-mrs-muir/024543071426&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><span itemprop="name"> The Ghost And Mrs. Muir DVD</span></a>
+<span class="money" itemprop="priceRange">$11.21</span> <a style="display:inline;border:0;" href="http://shop.tcm.com/checkout?atc=024543071426&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank">
 <img src="http://i.cdn.turner.com/v5cache/TCM/images/reskin/redesign/shop_addtocart_btn.png"></a>
 </span>
 <span class="flyout-sub">
-<a itemprop="url" href="http://shop.tcm.com/film-noir-collection/011301634061&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><span itemprop="name">Film Noir Collection DVD</span></a>
-<span class="money" itemprop="priceRange">$7.95</span> <a style="display:inline;border:0;" href="http://shop.tcm.com/checkout?atc=011301634061&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank">
+<a itemprop="url" href="https://shop.tcm.com/forbidden-hollywood-the-pre-code-era-1930-1934-when-sin-ruled-the-movies-turner-classic-movies/9780762466771&#10;&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank"><span itemprop="name">Forbidden Hollywood: The Pre-Code Era (1930-1934): When Sin Ruled the Movies Book</span></a>
+<span class="money" itemprop="priceRange">$22.95</span> <a style="display:inline;border:0;" href="https://shop.tcm.com/checkout?atc=9780762466771&amp;ecid=PRF-TCM-100189&amp;pa=PRF-TCM-100189" target="_blank">
 <img src="http://i.cdn.turner.com/v5cache/TCM/images/reskin/redesign/shop_addtocart_btn.png"></a>
 </span>
 </div>
@@ -484,13 +475,14 @@ console.log(response);
 <div id="container-search">
 <!-- sign in area -->
 <div id="tcm-login">
+<a href="https://www.tcm.com/subscriptions" style="padding-right:20px;"><strong>Sign Up For TCM Emails</strong></a>
 <!-- Sign Up/ Sign In area ; disappears when user logs in-->
-<div class="gigya-login visible-logged-out tn-hidden" style="padding-right:20px">
+<div class="gigya-login visible-logged-out tn-hidden" style="padding-right:20px; display:none">
 <strong>TCM.com:</strong>
 <a href="#" class="signUp" onclick="gigya.accounts.showScreenSet({screenSet:'Login-web', startScreen:'gigya-register-screen'});">Sign Up </a> | <a href="#" class="logIn" onclick="gigya.accounts.showScreenSet({screenSet:'Login-web', startScreen:'gigya-login-screen'});">Sign In</a>
 </div>
 <!-- Edit Profile/ Sign Out ; disappears when user logs out-->
-<div class="gigya-logout visible-logged-in tn-hidden">
+<div class="gigya-logout visible-logged-in tn-hidden display:none">
 <strong>TCM.com:</strong>
 <span class="editProfile" href="#" style="margin:2px 2px 0 0;">Hi username! </span> | <a href="#" class="logOut" onclick="gigya.accounts.logout();">Sign Out</a> | <a href="/my-profile/index.html">My Profile </a>
 </div>
@@ -1677,11 +1669,12 @@ ARRANGEMENT WITH PENGUIN GROUP (USA) INC.
 <form id="tcmNewsLwtterForm" name="tcmNewsLwtterForm" onsubmit="return checkEmail()" action="/newsLetter/subscribe.html">
 <div id="formDiv">
 <div id="textDiv">
-<a href="#" onclick="gigya.accounts.showScreenSet({screenSet:'Login-web', startScreen:'gigya-register-screen'});" id="offer" style="text-transform:captilaize"> <b>TCM SHOP NEWSLETTER:</b> Subscribe to our store newsletter for savings!</a>
-</div>
-</div>
-</form>
-</div> 
+<a href="https://www.tcm.com/subscriptions" style="text-transform:captilaize; font-size: 8px;">
+<b>Sign Up For TCM Emails</b></a><b>
+</b></div><b>
+</b></div><b>
+
+</b></form></div><b> 
 <div id="space"></div>
 <div id="footerNetwork">
 OUR INTERNATIONAL SITES<br>
@@ -1697,14 +1690,14 @@ OUR INTERNATIONAL SITES<br>
 <a href="http://www.adultswim.com" target="_blank" itemprop="url">adultswim.com</a>
 </div> 
 <div id="footerLegal">
-TM &amp; © 2018 Turner Classic Movies, Inc. A WarnerMedia Company. All Rights Reserved. <br>
+TM &amp; © 2019 Turner Classic Movies, Inc. A WarnerMedia Company. All Rights Reserved. <br>
 <a href="http://www.tcm.com/code-of-conduct.html" target="_blank" itemprop="url">CODE OF CONDUCT FOR THIS SITE</a> | <a href="http://news.turner.com/section_display.cfm?section_id=75" target="_blank" itemprop="url">PRESS ROOM</a> | <a href="http://www.tcm.com/privacy.html" target="_blank" itemprop="url">PRIVACY POLICY</a> |
 <a id="tcm_adchoices" style="font-weight: normal;" itemprop="url"><script type="text/javascript" src="//consent.truste.com/notice?domain=turner.com&amp;c=tcm_adchoices&amp;text=true&amp;country=us"></script> </a> <img style="position: relative; top: 1px;" src="http://i.cdn.turner.com/cnn/.element/img/3.0/global/misc/logo_ad_choices_footer.png" border="0" valign="middle"> |
 <a href="http://www.tcm.com/terms-of-use.html" target="_blank" itemprop="url">TERMS OF USE</a>
 </div> 
 <!-- web analytics footer sturcutre/web-analytics/footer removed if /bonhams or /fathom-->
-<script language="JavaScript" type="text/javascript" src="http://i.cdn.turner.com/analytics/tcm/www-set-metadata.js"></script>
-<script language="JavaScript" type="text/javascript" src="http://i.cdn.turner.com/analytics/tcm/jsmd-prod.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://i.cdn.turner.com/analytics/tcm/www-set-metadata.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://i.cdn.turner.com/analytics/tcm/jsmd-prod.js"></script>
 <script language="JavaScript">
 var pageURL = window.location.pathname;
 if (pageURL.indexOf("/.element/ssi/ads.iframes/") == -1 && pageURL.indexOf("/doubleclick/dartiframe.html") == -1) {
@@ -1751,4 +1744,4 @@ return false;
 </script>
 </body>
 </html>
-</noscript></ark:body_end></div></body></html>
+</noscript></ark:body_end></b></div></body></html>
